# tRustedVisor-M

./: .gitignore  Cargo.toml  README.md  log.txt  run.sh
.cargo/: config.toml
hv/: Cargo.toml  build.rs  memory.x
hv/src/: hv.rs  hypercall.rs  main copy.rs  main.rs
vm0/: Cargo.toml  memory.x
vm0/src/: main.rs
